temporarily run packaging / publishing step to debug it

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -84,7 +84,7 @@ stages:
     dependsOn: 
     - Build
     - TSLint
-    condition: and(succeeded(), notin(variables['Build.Reason'], 'PullRequest'))
+    condition: succeeded()
     pool:
       vmImage: 'windows-latest'
     strategy:
