--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -115,6 +115,8 @@ stages:
     - bash: |
           npm install rimraf --verbose
           npm install vsce -g --verbose
+          where vsce
+          echo %PATH%
           vsce package -o $(package-name)-$(GetVersion.version).vsix --ignoreFile ../.vscodeignore --yarn
       displayName: Package Artifact
       workingDirectory: $(dir-name)
@@ -179,6 +181,8 @@ stages:
       displayName: 'Install Node.js'
     - bash: |
         npm install vsce -g --verbose
+        where vsce
+        echo %PATH%
         vsce publish --packagePath vscode-dotnet-runtime-$(version).vsix -p $(VSCODE_MARKETPLACE_TOKEN)
       displayName: 'Publish to Marketplace'
       workingDirectory: '$(System.ArtifactsDirectory)/vscode-dotnet-runtime-extension'
@@ -232,6 +236,8 @@ stages:
       displayName: 'Install Node.js'
     - bash: |
         npm install vsce -g --verbose
+        where vsce
+        echo %PATH%
         vsce publish --packagePath vscode-dotnet-sdk-$(version).vsix -p $(VSCODE_MARKETPLACE_TOKEN)
       displayName: 'Publish to Marketplace'
       workingDirectory: '$(System.ArtifactsDirectory)/vscode-dotnet-sdk-extension'
