--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -91,6 +91,7 @@
 		"mocha": "^9.1.3",
 		"open": "^8.4.0",
 		"rimraf": "3.0.2",
+		"safe-regex-test": "^1.0.0",
 		"shelljs": "^0.8.4",
 		"ts-loader": "^9.2.6",
 		"tslint": "^5.20.1",
