Preserve current lock file versions

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -74,8 +74,8 @@ stages:
         versionSpec: '15.x'
       displayName: 'Install Node.js'
     - bash: |
-        npm install --cache /temp/empty-cache
-        npm install tslint --verbose
+        npm ci --cache /temp/empty-cache
+        npm ci tslint --verbose
         npm run lint
       displayName: Run Lint
   ##### Package and Publish #####
@@ -113,10 +113,8 @@ stages:
       displayName: 'Get Version'
       workingDirectory: $(dir-name)
     - bash: |
-          npm install rimraf --verbose
-          npm install vsce -g --verbose
-          where vsce
-          echo %PATH%
+          npm ci rimraf --verbose
+          npm ci vsce -g --verbose
           vsce package -o $(package-name)-$(GetVersion.version).vsix --ignoreFile ../.vscodeignore --yarn
       displayName: Package Artifact
       workingDirectory: $(dir-name)
@@ -180,9 +178,7 @@ stages:
         versionSpec: '15.x'
       displayName: 'Install Node.js'
     - bash: |
-        npm install vsce -g --verbose
-        where vsce
-        echo %PATH%
+        npm ci vsce -g --verbose
         vsce publish --packagePath vscode-dotnet-runtime-$(version).vsix -p $(VSCODE_MARKETPLACE_TOKEN)
       displayName: 'Publish to Marketplace'
       workingDirectory: '$(System.ArtifactsDirectory)/vscode-dotnet-runtime-extension'
@@ -235,9 +231,7 @@ stages:
         versionSpec: '15.x'
       displayName: 'Install Node.js'
     - bash: |
-        npm install vsce -g --verbose
-        where vsce
-        echo %PATH%
+        npm ci vsce -g --verbose
         vsce publish --packagePath vscode-dotnet-sdk-$(version).vsix -p $(VSCODE_MARKETPLACE_TOKEN)
       displayName: 'Publish to Marketplace'
       workingDirectory: '$(System.ArtifactsDirectory)/vscode-dotnet-sdk-extension'
