--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"lint": "tslint -c tslint.json 'vscode-dotnet-runtime-library/src/**/*.ts' 'vscode-dotnet-runtime-extension/src/**/*.ts' 'vscode-dotnet-sdk-extension/src/**/*.ts'"
 	},
 	"dependencies": {
-		"vsce": "2.11.0"
+		"tslint": "^6.1.3",
+		"vsce": "^2.11.0",
+		"yarn": "^1.22.19"
 	}
 }
