--- a/vscode-dotnet-runtime-library/package.json
+++ b/vscode-dotnet-runtime-library/package.json
@@ -38,7 +38,6 @@
 		"diff": ">=5.0.0",
 		"eol": "^0.9.1",
 		"es-abstract": "^1.19.1",
-		"fsevents": "^2.3.2",
 		"is-online": "^9.0.1",
 		"mocha": "^9.1.3",
 		"open": "^8.4.0",
@@ -47,7 +46,7 @@
 		"request-promise-native": "^1.0.8",
 		"rimraf": "3.0.2",
 		"shelljs": "0.8.5",
-		"tslint": "5.20.1",
+		"tslint": "^5.20.1",
 		"typescript": "4.4.4",
 		"vscode-extension-telemetry": "^0.4.3",
 		"vscode-test": "^1.6.1"
