--- a/vscode-dotnet-runtime-library/package.json
+++ b/vscode-dotnet-runtime-library/package.json
@@ -13,10 +13,10 @@
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"scripts": {
-		"vscode:prepublish": "npm run compile",
-		"compile": "npm run clean && tsc -p ./",
-		"watch": "npm run clean && tsc -watch -p ./",
-		"test": "npm run compile --silent && npm run unit-test",
+		"vscode:prepublish": "yarn run compile",
+		"compile": "yarn run clean && tsc -p ./",
+		"watch": "yarn run clean && tsc -watch -p ./",
+		"test": "yarn run compile --silent && yarn run unit-test",
 		"unit-test": "mocha -u tdd -- dist/test/unit/**.test.js",
 		"clean": "rimraf dist"
 	},
