--- a/vscode-dotnet-sdk-extension/package.json
+++ b/vscode-dotnet-sdk-extension/package.json
@@ -71,7 +71,7 @@
 		"vscode:uninstall": "node ./dist/ExtensionUninstall",
 		"compile": "yarn run clean && tsc -p ./",
 		"watch": "yarn run compile && tsc -watch -p ./",
-		"test": "yarn run compile --silent && node ./dist/test/functional/runTest.js",
+		"test": "yarn run compile && node ./dist/test/functional/runTest.js",
 		"clean": "rimraf dist",
 		"compile-all": "cd ../vscode-dotnet-runtime-library && yarn install --frozen-lockfile && yarn run compile && cd ../vscode-dotnet-sdk-extension && yarn install --frozen-lockfile && yarn run compile",
 		"lint": "tslint -c ../tslint.json '../vscode-dotnet-runtime-library/src/**/*.ts' '../vscode-dotnet-sdk-extension/src/**/*.ts'",
