--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -16,7 +16,8 @@
 	"version": "1.6.0",
 	"publisher": "ms-dotnettools",
 	"engines": {
-		"vscode": "1.62.0"
+		"vscode": "1.62.0",
+		"npm": "\n\nERROR: Please use yarn instead of npm for this repository.!!!\n\n"
 	},
 	"categories": [
 		"Other"
