--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -25,7 +25,7 @@ RUN rm -rf /opt/yarn-* \
     && apt-get -y install --no-install-recommends yarn
 
 # Install tslint and typescript
-RUN npm install -g tslint typescript
+RUN npm install --install-links -g tslint typescript
 
 # Clean up
 RUN apt-get autoremove -y \
