--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -74,8 +74,8 @@ stages:
         versionSpec: '15.x'
       displayName: 'Install Node.js'
     - bash: |
-        npm install --cache /temp/empty-cache
-        npm install tslint --verbose
+        npm install --install-links --cache /temp/empty-cache
+        npm install --install-links tslint --verbose
         npm run lint
       displayName: Run Lint
   ##### Package and Publish #####
@@ -113,8 +113,8 @@ stages:
       displayName: 'Get Version'
       workingDirectory: $(dir-name)
     - bash: |
-          npm install rimraf --verbose
-          npm install vsce -g --verbose
+          npm install --install-links rimraf --verbose
+          npm install --install-links vsce -g --verbose
           where vsce
           echo %PATH%
           vsce package -o $(package-name)-$(GetVersion.version).vsix --ignoreFile ../.vscodeignore
@@ -180,7 +180,7 @@ stages:
         versionSpec: '15.x'
       displayName: 'Install Node.js'
     - bash: |
-        npm install vsce -g --verbose
+        npm install --install-links vsce -g --verbose
         where vsce
         echo %PATH%
         vsce publish --packagePath vscode-dotnet-runtime-$(version).vsix -p $(VSCODE_MARKETPLACE_TOKEN)
@@ -235,7 +235,7 @@ stages:
         versionSpec: '15.x'
       displayName: 'Install Node.js'
     - bash: |
-        npm install vsce -g --verbose
+        npm install --install-links vsce -g --verbose
         where vsce
         echo %PATH%
         vsce publish --packagePath vscode-dotnet-sdk-$(version).vsix -p $(VSCODE_MARKETPLACE_TOKEN)
