--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -92,6 +92,7 @@
 		"open": "^8.4.0",
 		"rimraf": "3.0.2",
 		"shelljs": "^0.8.4",
+		"sudo": "^1.0.3",
 		"ts-loader": "^9.2.6",
 		"tslint": "^5.20.1",
 		"typescript": "4.4.4",
