--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -85,6 +85,8 @@
 		"chai": "4.3.4",
 		"child_process": "^1.0.2",
 		"diff": ">=5.0.0",
+		"es-abstract": "^1.20.4",
+		"extsprintf": "^1.4.1",
 		"glob": "^7.2.0",
 		"hmac-drbg": "^1.0.1",
 		"is-online": "^9.0.1",
@@ -92,7 +94,7 @@
 		"open": "^8.4.0",
 		"rimraf": "3.0.2",
 		"shelljs": "^0.8.4",
-		"sudo": "^1.0.3",
+		"sudo": "1.0.3",
 		"ts-loader": "^9.2.6",
 		"tslint": "^5.20.1",
 		"typescript": "4.4.4",
