--- a/vscode-dotnet-sdk-extension/package.json
+++ b/vscode-dotnet-sdk-extension/package.json
@@ -93,6 +93,7 @@
 		"is-online": "^9.0.1",
 		"mocha": "^9.1.3",
 		"open": "^8.4.0",
+		"pnpm": "^7.13.2",
 		"rimraf": "3.0.2",
 		"shelljs": "^0.8.4",
 		"ts-loader": "^9.2.6",
