--- a/sample/package.json
+++ b/sample/package.json
@@ -30,6 +30,10 @@
 		"onCommand:sample.dotnet-sdk.uninstallAll",
 		"onCommand:sample.dotnet-sdk.showAcquisitionLog"
 	],
+	"extensionDependencies": [
+        "ms-dotnettools.vscode-dotnet-runtime",
+        "ms-dotnettools.vscode-dotnet-sdk"
+    ],
 	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
