--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -16,7 +16,7 @@
 	"version": "1.6.1",
 	"publisher": "ms-dotnettools",
 	"engines": {
-		"vscode": "1.72.0"
+		"vscode": "^1.72.0"
 	},
 	"categories": [
 		"Other"
