--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -75,7 +75,7 @@ stages:
       displayName: 'Install Node.js'
     - bash: |
         npm install --cache /temp/empty-cache
-        npm install tslint --verbose
+        npm install tslint --reg https://registry.npmjs.org/ --verbose
         npm run lint
       displayName: Run Lint
   ##### Verify NPM and Yarn are in sync #####
