[WIP] Basic template of API Code for List SDKS, excluding the ts command code.

--- a/vscode-dotnet-sdk-extension/package.json
+++ b/vscode-dotnet-sdk-extension/package.json
@@ -37,9 +37,9 @@
 	"activationEvents": [
 		"onCommand:dotnet-sdk.acquire",
 		"onCommand:dotnet-sdk.acquireStatus",
+		"onCommand:dotnet-sdk.listSdks",
 		"onCommand:dotnet-sdk.uninstallAll",
-		"onCommand:dotnet-sdk.showAcquisitionLog",
-		"onCommand:dotnet-sdk.reportIssue"
+		"onCommand:dotnet-sdk.showAcquisitionLog"
 	],
 	"main": "./dist/extension.js",
 	"contributes": {
