--- a/sample/package.json
+++ b/sample/package.json
@@ -18,18 +18,6 @@
 	"capabilities": {
 		"virtualWorkspaces": true
 	},
-	"activationEvents": [
-		"onCommand:sample.helloworld",
-		"onCommand:sample.dotnet.acquire",
-		"onCommand:sample.dotnet.acquireStatus",
-		"onCommand:sample.dotnet.uninstallAll",
-		"onCommand:sample.dotnet.concurrentTest",
-		"onCommand:sample.dotnet.showAcquisitionLog",
-		"onCommand:sample.dotnet-sdk.acquire",
-		"onCommand:sample.dotnet-sdk.acquireStatus",
-		"onCommand:sample.dotnet-sdk.uninstallAll",
-		"onCommand:sample.dotnet-sdk.showAcquisitionLog"
-	],
 	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
@@ -71,6 +59,11 @@
 			{
 				"command": "sample.dotnet-sdk.acquireStatus",
 				"title": "Check the status of acquiring the .NET SDK",
+				"category": "Sample"
+			},
+			{
+				"command": "sample.dotnet-sdk.listSdks",
+				"title": "List the newest, in-support versions of the .NET SDK available.",
 				"category": "Sample"
 			},
 			{
