Add list sdks and runtimes to sample extension

--- a/sample/package.json
+++ b/sample/package.json
@@ -63,7 +63,7 @@
 			},
 			{
 				"command": "sample.dotnet-sdk.listSdks",
-				"title": "List the newest, in-support versions of the .NET SDK available.",
+				"title": "List the available and in-support versions of the .NET SDK or .NET Runtime.",
 				"category": "Sample"
 			},
 			{
