--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
 	},
 	"dependencies": {
 		"axios": "1.3.4",
+		"axios-cache-interceptor": "1.0.1",
+		"axios-retry": "3.4.0",
+		"source-map-support": "^0.5.21",
 		"vsce": "2.11.0"
+	},
+	"devDependencies": {
+		"@types/source-map-support": "^0.5.6"
 	}
 }
