--- a/vscode-dotnet-sdk-extension/package.json
+++ b/vscode-dotnet-sdk-extension/package.json
@@ -84,10 +84,13 @@
 		"@types/node": "16.11.7",
 		"@types/rimraf": "3.0.2",
 		"@types/vscode": "1.62.0",
+		"array-buffer-byte-length": "^1.0.0",
+		"aws4": "^1.12.0",
 		"chai": "4.3.4",
 		"chai-as-promised": "^7.1.1",
 		"child_process": "^1.0.2",
 		"diff": ">=5.0.0",
+		"es-abstract": "1.19.1",
 		"glob": "^7.2.0",
 		"hmac-drbg": "^1.0.1",
 		"is-online": "^9.0.1",
@@ -95,6 +98,7 @@
 		"open": "^8.4.0",
 		"rimraf": "3.0.2",
 		"shelljs": "^0.8.5",
+		"source-map-support": "^0.5.21",
 		"ts-loader": "^9.2.6",
 		"tslint": "^5.20.1",
 		"typescript": "4.4.4",
