--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -107,7 +107,7 @@
 		"@types/rimraf": "3.0.2",
 		"@types/vscode": "1.62.0",
 		"copy-webpack-plugin": "9.0.1",
-		"webpack": "5.63.0",
+		"webpack": "^5.76.0",
 		"webpack-cli": "4.9.1"
 	},
 	"__metadata": {
