--- a/vscode-dotnet-sdk-extension/package.json
+++ b/vscode-dotnet-sdk-extension/package.json
@@ -93,6 +93,7 @@
 		"es-abstract": "1.19.1",
 		"glob": "^7.2.0",
 		"hmac-drbg": "^1.0.1",
+		"http-cache-semantics": "4.1.1",
 		"is-online": "^9.0.1",
 		"mocha": "^9.1.3",
 		"open": "^8.4.0",
@@ -107,7 +108,7 @@
 	},
 	"devDependencies": {
 		"copy-webpack-plugin": "^9.0.1",
-		"webpack": "5.63.0",
+		"webpack": "5.76.0",
 		"webpack-cli": "4.9.1"
 	},
 	"__metadata": {
