--- a/package.json
+++ b/package.json
@@ -14,15 +14,7 @@
 		"lint": "tslint -c tslint.json 'vscode-dotnet-runtime-library/src/**/*.ts' 'vscode-dotnet-runtime-extension/src/**/*.ts' 'vscode-dotnet-sdk-extension/src/**/*.ts'"
 	},
 	"dependencies": {
-		"axios": "1.3.4",
-		"axios-cache-interceptor": "1.0.1",
-		"axios-retry": "3.4.0",
-		"cacheable-request": "10.2.7",
-		"http-cache-semantics": "4.1.1",
-		"is-online": "10.0.0",
-		"source-map-support": "^0.5.21",
-		"vsce": "2.11.0",
-		"webpack": "5.76.0"
+		"vsce": "2.11.0"
 	},
 	"devDependencies": {
 		"@types/source-map-support": "^0.5.6"
