--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -82,6 +82,9 @@
 		"webpack": "webpack --mode development"
 	},
 	"dependencies": {
+		"axios": "^1.3.4",
+		"axios-cache-interceptor": "^1.0.1",
+		"axios-retry": "^3.4.0",
 		"chai": "4.3.4",
 		"child_process": "^1.0.2",
 		"diff": ">=5.0.0",
