--- a/vscode-dotnet-sdk-extension/package.json
+++ b/vscode-dotnet-sdk-extension/package.json
@@ -86,6 +86,9 @@
 		"@types/vscode": "1.62.0",
 		"array-buffer-byte-length": "^1.0.0",
 		"aws4": "^1.12.0",
+		"axios": "^1.3.4",
+		"axios-cache-interceptor": "^1.0.1",
+		"axios-retry": "^3.4.0",
 		"chai": "4.3.4",
 		"chai-as-promised": "^7.1.1",
 		"child_process": "^1.0.2",
