--- a/vscode-dotnet-runtime-library/package.json
+++ b/vscode-dotnet-runtime-library/package.json
@@ -38,6 +38,7 @@
 		"axios-retry": "^3.4.0",
 		"chai": "4.3.4",
 		"chai-as-promised": "^7.1.1",
+		"debug": "^4.3.4",
 		"diff": ">=5.0.0",
 		"eol": "^0.9.1",
 		"es-abstract": "^1.19.1",
