update exported apis to have list newest sdks or runtimes

--- a/sample/package.json
+++ b/sample/package.json
@@ -62,7 +62,7 @@
 				"category": "Sample"
 			},
 			{
-				"command": "sample.dotnet-sdk.listSdks",
+				"command": "sample.dotnet-sdk.listNewestSDKs",
 				"title": "List the available and in-support versions of the .NET SDK or .NET Runtime.",
 				"category": "Sample"
 			},
