--- a/vscode-dotnet-sdk-extension/package.json
+++ b/vscode-dotnet-sdk-extension/package.json
@@ -37,7 +37,7 @@
 	"activationEvents": [
 		"onCommand:dotnet-sdk.acquire",
 		"onCommand:dotnet-sdk.acquireStatus",
-		"onCommand:dotnet-sdk.listSdks",
+		"onCommand:dotnet-sdk.listNewestSDKs",
 		"onCommand:dotnet-sdk.uninstallAll",
 		"onCommand:dotnet-sdk.showAcquisitionLog"
 	],
