rename commands to listNewestDotnets -> this is because the command lets you pick either runtimes or SDKs, so the old name was technically incorrect even though it was less verbose

--- a/vscode-dotnet-sdk-extension/package.json
+++ b/vscode-dotnet-sdk-extension/package.json
@@ -37,7 +37,7 @@
 	"activationEvents": [
 		"onCommand:dotnet-sdk.acquire",
 		"onCommand:dotnet-sdk.acquireStatus",
-		"onCommand:dotnet-sdk.listNewestSDKs",
+		"onCommand:dotnet-sdk.listNewestDotnets",
 		"onCommand:dotnet-sdk.uninstallAll",
 		"onCommand:dotnet-sdk.showAcquisitionLog"
 	],
