--- a/sample/package.json
+++ b/sample/package.json
@@ -62,8 +62,8 @@
 				"category": "Sample"
 			},
 			{
-				"command": "sample.dotnet-sdk.listNewestSDKs",
-				"title": "List the available and in-support versions of the .NET SDK or .NET Runtime.",
+				"command": "sample.dotnet-sdk.listNewestDotnets",
+				"title": "List the newest available and versions of the .NET SDKs or .NET Runtimes.",
 				"category": "Sample"
 			},
 			{
