--- a/vscode-dotnet-sdk-extension/package.json
+++ b/vscode-dotnet-sdk-extension/package.json
@@ -38,6 +38,7 @@
 		"onCommand:dotnet-sdk.acquire",
 		"onCommand:dotnet-sdk.acquireStatus",
 		"onCommand:dotnet-sdk.listVersions",
+		"onCommand:dotnet-sdk.recommendedVersion",
 		"onCommand:dotnet-sdk.uninstallAll",
 		"onCommand:dotnet-sdk.showAcquisitionLog"
 	],
