--- a/vscode-dotnet-runtime-library/package.json
+++ b/vscode-dotnet-runtime-library/package.json
@@ -33,12 +33,12 @@
 		"@types/semver": "^7.3.9",
 		"@types/shelljs": "0.8.9",
 		"@types/vscode": "1.62.0",
+		"@vscode/sudo-prompt": "^9.3.1",
 		"chai": "4.3.4",
 		"chai-as-promised": "^7.1.1",
 		"diff": ">=5.0.0",
 		"eol": "^0.9.1",
 		"es-abstract": "^1.19.1",
-		"fsevents": "^2.3.2",
 		"is-online": "^9.0.1",
 		"mocha": "^9.1.3",
 		"open": "^8.4.0",
