--- a/vscode-dotnet-sdk-extension/package.json
+++ b/vscode-dotnet-sdk-extension/package.json
@@ -9,8 +9,8 @@
 	},
 	"license": "MIT",
 	"author": "Microsoft Corporation",
-	"displayName": ".NET Education Bundle SDK Install Tool",
-	"description": "Allows acquisition of the .NET SDK.",
+	"displayName": ".NET SDK Install Tool",
+	"description": "This extension installs and manages different versions of the .NET SDK.",
 	"appInsightsKey": "02dc18e0-7494-43b2-b2a3-18ada5fcb522",
 	"icon": "images/dotnetIcon.png",
 	"version": "0.9.0",
@@ -47,17 +47,17 @@
 		"commands": [
 			{
 				"command": "dotnet-sdk.reportIssue",
-				"title": "Report an issue with the .NET Education Bundle SDK Install Tool.",
-				"category": ".NET Education Bundle SDK Install Tool"
+				"title": "Report an issue with the .NET SDK Install Tool.",
+				"category": ".NET SDK Install Tool"
 			}
 		],
 		"configuration": {
-			"title": ".NET Education Bundle SDK Install Tool",
+			"title": ".NET SDK Install Tool",
 			"properties": {
 				"dotnetSDKAcquisitionExtension.enableTelemetry": {
 					"type": "boolean",
 					"default": true,
-					"description": "Enable Telemetry for the .NET Education Bundle SDK Install Tool."
+					"description": "Enable Telemetry for the .NET SDK Install Tool."
 				},
 				"dotnetSDKAcquisitionExtension.installTimeoutValue": {
 					"type": "number",
