--- a/sample/package.json
+++ b/sample/package.json
@@ -10,7 +10,7 @@
 	"version": "0.0.1",
 	"publisher": "ms-dotnettools",
 	"engines": {
-		"vscode": "^1.72.0"
+		"vscode": "^1.74.0"
 	},
 	"categories": [
 		"Other"
@@ -96,6 +96,7 @@
 		"clean": "rimraf out"
 	},
 	"dependencies": {
+		"@vscode/vsce": "^2.19.0",
 		"vscode-dotnet-runtime": "file:../vscode-dotnet-runtime-extension",
 		"vscode-dotnet-runtime-library": "file:../vscode-dotnet-runtime-library",
 		"vscode-dotnet-sdk": "file:../vscode-dotnet-sdk-extension"
@@ -104,7 +105,7 @@
 		"@types/mocha": "9.0.0",
 		"@types/node": "16.11.7",
 		"@types/rimraf": "3.0.2",
-		"@types/vscode": "1.62.0",
+		"@types/vscode": "1.74.0",
 		"mocha": "^9.2.2",
 		"rimraf": "3.0.2",
 		"tslint": "5.20.1",
