Fix the runtime extension, which had a bad versioning change from the merge, as a merge commit was dropped during a rebase

--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -33,6 +33,13 @@
 		},
 		"virtualWorkspaces": true
 	},
+	"activationEvents": [
+		"onCommand:dotnet.acquire",
+		"onCommand:dotnet.acquireStatus",
+		"onCommand:dotnet.uninstallAll",
+		"onCommand:dotnet.showAcquisitionLog",
+		"onCommand:dotnet.ensureDotnetDependencies"
+	],
 	"main": "./dist/extension.js",
 	"types": "./dist/extension.d.ts",
 	"contributes": {
