--- a/vscode-dotnet-sdk-extension/package.json
+++ b/vscode-dotnet-sdk-extension/package.json
@@ -34,6 +34,14 @@
 		},
 		"virtualWorkspaces": true
 	},
+	"activationEvents": [
+		"onCommand:dotnet-sdk.acquire",
+		"onCommand:dotnet-sdk.acquireStatus",
+		"onCommand:dotnet-sdk.listVersions",
+		"onCommand:dotnet-sdk.recommendedVersion",
+		"onCommand:dotnet-sdk.uninstallAll",
+		"onCommand:dotnet-sdk.showAcquisitionLog"
+	],
 	"main": "./dist/extension.js",
 	"contributes": {
 		"commands": [
