--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -98,11 +98,11 @@ stages:
         scriptSource: 'filePath'
         scriptPath: 'dependency-verifier.py'
         arguments: '$(System.PullRequest.TargetBranch)'
-        failOnStderr: true  
+        failOnStderr: true
   ##### Package and Publish #####
   - job: Package
     displayName: 'Package and Publish'
-    dependsOn: 
+    dependsOn:
     - Build
     - TSLint
     condition: succeeded()
@@ -134,7 +134,7 @@ stages:
       displayName: 'Get Version'
       workingDirectory: $(dir-name)
     - bash: |
-          npm install rimraf --reg https://registry.npmjs.org/ --verbose
+          npm install rimraf -g --reg https://registry.npmjs.org/ --verbose
           npm install vsce -g --reg https://registry.npmjs.org/ --verbose
           vsce package -o $(package-name)-$(GetVersion.version).vsix --ignoreFile ../.vscodeignore --yarn
       displayName: Package Artifact
