Respond to Jacques feedback
Use ia32 instead of x32 as x32 is not a relevant architecture and I was confused.
Use program files instead of assuming the drive is a c drive.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -134,7 +134,7 @@ stages:
       displayName: 'Get Version'
       workingDirectory: $(dir-name)
     - bash: |
-          npm install rimraf -g --reg https://registry.npmjs.org/ --verbose
+          npm install rimraf --reg https://registry.npmjs.org/ --verbose
           npm install vsce -g --reg https://registry.npmjs.org/ --verbose
           vsce package -o $(package-name)-$(GetVersion.version).vsix --ignoreFile ../.vscodeignore --yarn
       displayName: Package Artifact
