--- a/sample/package.json
+++ b/sample/package.json
@@ -10,7 +10,7 @@
 	"version": "0.0.1",
 	"publisher": "ms-dotnettools",
 	"engines": {
-		"vscode": "^1.74.0"
+		"vscode": "^1.75.0"
 	},
 	"categories": [
 		"Other"
@@ -18,6 +18,13 @@
 	"capabilities": {
 		"virtualWorkspaces": true
 	},
+    "extensionDependencies": [
+
+        "ms-dotnettools.vscode-dotnet-runtime",
+
+        "ms-dotnettools.vscode-dotnet-sdk"
+
+    ],
 	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
