--- a/sample/package.json
+++ b/sample/package.json
@@ -19,6 +19,11 @@
 		"virtualWorkspaces": true
 	},
 	"main": "./out/extension.js",
+
+    "extensionDependencies": [
+        "ms-dotnettools.vscode-dotnet-runtime",
+        "ms-dotnettools.vscode-dotnet-sdk"
+    ],
 	"contributes": {
 		"commands": [
 			{
