Add a JSON Schema for Linux + Add Mock Webpack
Add a step to compile for test so we can mock webpacking the library to make tests pass.

Add a json schema per @baronfel 's suggestion to explain our json linux distro schema better

--- a/vscode-dotnet-runtime-library/package.json
+++ b/vscode-dotnet-runtime-library/package.json
@@ -14,7 +14,10 @@
 	"types": "./dist/index.d.ts",
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
-		"compile": "npm run clean && tsc -p ./",
+		"compile": "npm run clean && tsc -p ./ && npm run mockPack",
+		"mockPack": "run-script-os",
+		"mockPack:darwin:linux": "pushd .. && sh ./mock-webpack.sh && popd",
+		"mockPack:win32": "pushd .. && @powershell -NoProfile -ExecutionPolicy Unrestricted -Command ./mock-webpack.ps1 && popd",
 		"watch": "npm run clean && tsc -watch -p ./",
 		"test": "npm run compile --silent && npm run unit-test",
 		"unit-test": "mocha -u tdd -- dist/test/unit/**.test.js",
@@ -46,6 +49,7 @@
 		"request": "^2.88.0",
 		"request-promise-native": "^1.0.8",
 		"rimraf": "3.0.2",
+		"run-script-os": "^1.1.6",
 		"shelljs": "0.8.5",
 		"tslint": "5.20.1",
 		"typescript": "4.4.4",
