--- a/vscode-dotnet-sdk-extension/package.json
+++ b/vscode-dotnet-sdk-extension/package.json
@@ -70,7 +70,10 @@
 	"scripts": {
 		"vscode:prepublish": "npm run compile-all && npm install && webpack --mode production",
 		"vscode:uninstall": "node ./dist/ExtensionUninstall",
-		"compile": "npm run clean && tsc -p ./",
+		"compile": "npm run clean && tsc -p ./ && npm run mockPack",
+		"mockPack": "run-script-os",
+		"mockPack:darwin:linux": "pushd .. && sh ./mock-webpack.sh && popd",
+		"mockPack:win32": "pushd .. && @powershell -NoProfile -ExecutionPolicy Unrestricted -Command ./mock-webpack.ps1 && popd",
 		"watch": "npm run compile && tsc -watch -p ./",
 		"test": "npm run compile --silent && node ./dist/test/functional/runTest.js",
 		"clean": "rimraf dist",
@@ -95,6 +98,7 @@
 		"mocha": "^9.1.3",
 		"open": "^8.4.0",
 		"rimraf": "3.0.2",
+		"run-script-os": "^1.1.6",
 		"shelljs": "^0.8.5",
 		"ts-loader": "^9.2.6",
 		"tslint": "^5.20.1",
