--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -13,7 +13,7 @@
 	"description": "Allows acquisition of the .NET runtime specifically for VS Code extension authors.",
 	"appInsightsKey": "02dc18e0-7494-43b2-b2a3-18ada5fcb522",
 	"icon": "images/dotnetIcon.png",
-	"version": "1.7.0",
+	"version": "1.7.1",
 	"publisher": "ms-dotnettools",
 	"engines": {
 		"vscode": "^1.72.0"
@@ -100,13 +100,13 @@
 		"yarn": "^1.22.19"
 	},
 	"devDependencies": {
-		"@types/chai": "4.2.22",
+		"@types/chai": "^4.3.5",
 		"@types/mocha": "^9.0.0",
 		"@types/node": "16.11.7",
 		"@types/rimraf": "3.0.2",
 		"@types/vscode": "1.62.0",
 		"copy-webpack-plugin": "9.0.1",
-		"webpack": "5.63.0",
+		"webpack": "5.88.2",
 		"webpack-cli": "4.9.1"
 	},
 	"__metadata": {
