--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -89,10 +89,12 @@
 		"child_process": "^1.0.2",
 		"diff": ">=5.0.0",
 		"glob": "^7.2.0",
+		"got": "11.8.5",
 		"hmac-drbg": "^1.0.1",
-		"is-online": "^9.0.1",
+		"is-online": "10.0.0",
 		"mocha": "^9.1.3",
 		"open": "^8.4.0",
+		"public-ip": "5.0.0",
 		"rimraf": "3.0.2",
 		"safe-regex-test": "^1.0.0",
 		"shelljs": "^0.8.5",
