--- a/vscode-dotnet-runtime-library/package.json
+++ b/vscode-dotnet-runtime-library/package.json
@@ -28,7 +28,6 @@
 		"@types/chai-as-promised": "^7.1.4",
 		"@types/mocha": "^9.0.0",
 		"@types/node": "16.11.7",
-		"@types/request-promise-native": "^1.0.18",
 		"@types/rimraf": "3.0.2",
 		"@types/semver": "^7.3.9",
 		"@types/shelljs": "0.8.9",
@@ -44,13 +43,11 @@
 		"es-abstract": "^1.19.1",
 		"got": "11.8.5",
 		"http-cache-semantics": "4.1.1",
-		"is-online": "10.0.0",
+		"is-online": "^10.0.0",
 		"mocha": "^9.1.3",
 		"open": "^8.4.0",
 		"p-retry": "^4.6.1",
 		"public-ip": "^5.0.0",
-		"request": "^2.88.0",
-		"request-promise-native": "^1.0.8",
 		"rimraf": "3.0.2",
 		"shelljs": "0.8.5",
 		"tslint": "5.20.1",
