--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -91,7 +91,7 @@
 		"glob": "^7.2.0",
 		"got": "11.8.5",
 		"hmac-drbg": "^1.0.1",
-		"is-online": "10.0.0",
+		"is-online": "^9.0.1",
 		"mocha": "^9.1.3",
 		"open": "^8.4.0",
 		"public-ip": "5.0.0",
