--- a/vscode-dotnet-runtime-library/package.json
+++ b/vscode-dotnet-runtime-library/package.json
@@ -22,6 +22,7 @@
 	},
 	"devDependencies": {
 		"@types/chai": "4.2.22",
+		"@types/proper-lockfile": "^4.1.2",
 		"glob": "^7.2.0"
 	},
 	"dependencies": {
@@ -47,6 +48,7 @@
 		"mocha": "^9.1.3",
 		"open": "^8.4.0",
 		"p-retry": "^4.6.1",
+		"proper-lockfile": "^4.1.2",
 		"public-ip": "^5.0.0",
 		"rimraf": "3.0.2",
 		"shelljs": "0.8.5",
