Add proxy url and try pwsh-- need to see if pwsh has the same syntax in ps7

--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -67,6 +67,10 @@
 				"dotnetAcquisitionExtension.existingDotnetPath": {
 					"type": "array",
 					"description": "File Path to an existing installation of .NET."
+				},
+				"dotnetAcquisitionExtension.proxyUrl": {
+					"type": "string",
+					"description": "URL to a proxy if you use one, such as: https://proxy:port"
 				}
 			}
 		}
