--- a/vscode-dotnet-sdk-extension/package.json
+++ b/vscode-dotnet-sdk-extension/package.json
@@ -63,6 +63,10 @@
 					"type": "number",
 					"default": 600,
 					"description": "Timeout for installing .NET SDK in seconds."
+				},
+				"dotnetAcquisitionExtension.proxyUrl": {
+					"type": "string",
+					"description": "URL to a proxy if you use one, such as: https://proxy:port"
 				}
 			}
 		}
