--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -77,6 +77,7 @@ stages:
       inputs:
         versionSpec: '16.10.0'
       displayName: 'Install Node.js'
+      continueOnError: true
     - bash: |
         npm install --cache /temp/empty-cache
         npm install tslint --reg https://registry.npmjs.org/ --verbose
