Fix timeout issue & Set environment correctly on windows
- the shell option is needed for spawn to access windows shell commands, exec does this by default but exec does not capture detailed output streams

- fix a timeout where ms was used as seconds

- note that you need to restart for telemetry notice to change

--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -57,7 +57,7 @@
 				"dotnetAcquisitionExtension.enableTelemetry": {
 					"type": "boolean",
 					"default": true,
-					"description": "Enable Telemetry for the .NET Runtime Install Tool"
+					"description": "Enable Telemetry for the .NET Runtime Install Tool. Restart VS Code to apply changes."
 				},
 				"dotnetAcquisitionExtension.installTimeoutValue": {
 					"type": "number",
