Rename the extension to .NET Install Tool
We would like to support downloading the SDK from it as well to reduce the number of extensions needed for C# to run, so we are renaming it

--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -9,7 +9,7 @@
 	},
 	"license": "MIT",
 	"author": "Microsoft Corporation",
-	"displayName": ".NET Runtime Install Tool",
+	"displayName": ".NET Install Tool",
 	"description": "This extension installs and manages different versions of the .NET Runtime.",
 	"appInsightsKey": "02dc18e0-7494-43b2-b2a3-18ada5fcb522",
 	"icon": "images/dotnetIcon.png",
@@ -47,17 +47,17 @@
 		"commands": [
 			{
 				"command": "dotnet.reportIssue",
-				"title": "Report an issue with the .NET Runtime Install Tool.",
-				"category": ".NET Runtime Install Tool"
+				"title": "Report an issue with the .NET Install Tool.",
+				"category": ".NET Install Tool"
 			}
 		],
 		"configuration": {
-			"title": ".NET Runtime Install Tool",
+			"title": ".NET Install Tool",
 			"properties": {
 				"dotnetAcquisitionExtension.enableTelemetry": {
 					"type": "boolean",
 					"default": true,
-					"description": "Enable Telemetry for the .NET Runtime Install Tool. Restart VS Code to apply changes."
+					"description": "Enable Telemetry for the .NET Install Tool. Restart VS Code to apply changes."
 				},
 				"dotnetAcquisitionExtension.installTimeoutValue": {
 					"type": "number",
