Return .NET App Host for SDK Extension
Instead of returning the SDK folder because the app host is what people need to call into .NET even if it does not use the SDK we installed, it will allow us to share the existing path setting for both extensions so people dont need to set both, which is confusing

--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -67,11 +67,8 @@
 				},
 				"dotnetAcquisitionExtension.existingDotnetPath": {
 					"type": "array",
-					"description": "File Path to an existing installation of a .NET Runtime."
-				},
-				"dotnetAcquisitionExtension.existingDotnetSDKPath": {
-					"type": "array",
-					"description": "File Path to an existing installation of a .NET SDK Folder."
+					"description": "File Path to an existing installation of .NET. Used for both the .NET SDK and .NET Runtime.",
+					"examples": ["C:\\Program Files\\dotnet\\dotnet.exe", "/usr/local/share/dotnet/dotnet", "/usr/lib/dotnet/dotnet"]
 				},
 				"dotnetAcquisitionExtension.proxyUrl": {
 					"type": "string",
