--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -10,7 +10,7 @@
 	"license": "MIT",
 	"author": "Microsoft Corporation",
 	"displayName": ".NET Install Tool",
-	"description": "This extension installs and manages different versions of the .NET Runtime.",
+	"description": "This extension installs and manages different versions of the .NET SDK and Runtime.",
 	"appInsightsKey": "02dc18e0-7494-43b2-b2a3-18ada5fcb522",
 	"icon": "images/dotnetIcon.png",
 	"version": "2.0.0",
