Update classes to all have worker contexts
Do this to deduplicate event stream, timeout time, extension state, proxy url, arch, and install key so we can throw errors from other places

uses a hack for the telemetry observer because it needs to be created before the acquisition context can be created

--- a/vscode-dotnet-runtime-library/.vscode/settings.json
+++ b/vscode-dotnet-runtime-library/.vscode/settings.json
@@ -11,9 +11,14 @@
     "cSpell.words": [
         "aspnet",
         "aspnetcore",
+        "hasher",
+        "HKCU",
         "HKEY",
         "norestart",
+        "OPTOUT",
+        "pkexec",
         "REGHEXVALUE",
-        "REGTYPE"
+        "REGTYPE",
+        "setx"
     ]
 }
