add a textarea as its required to have non markdown components but we dont want ppl to submit these issues publically

--- a/.github/ISSUE_TEMPLATE/security-fix.yaml
+++ b/.github/ISSUE_TEMPLATE/security-fix.yaml
@@ -9,3 +9,8 @@ body:
 - type: markdown
   attributes:
     value: "⚠️ Please do not open issues for anything you think might have a security implication."
+- type: textarea
+  attributes:
+    label: ‎‎‎‎‎‎‎ㅤ
+  validations:
+    required: true
