--- a/.github/ISSUE_TEMPLATE/security-fix.yml
+++ b/.github/ISSUE_TEMPLATE/security-fix.yml
@@ -1,17 +1,17 @@
-name: "Security fix"
-description: 'Report a security vulnerability'
-title: 'Reporting a Vulnerability'
+name: Security fix
+description: Report a security vulnerability
+title: ''
 labels: ["closeable"]
 body:
 - type: markdown
   attributes:
-    value: "Security issues and bugs should be reported privately to the Microsoft Security Response Center (MSRC), either by emailing secure@microsoft.com or via the portal at https://msrc.microsoft.com. You should receive a response within 24 hours. If for some reason you do not, please follow up via email to ensure we received your original message. Further information, including the MSRC PGP key, can be found in the MSRC Report an Issue FAQ."
-- type: markdown
-  attributes:
-    value: "⚠️ Please do not open issues for anything you think might have a security implication."
+    value: |
+      Security issues and bugs should be reported privately to the Microsoft Security Response Center (MSRC), either by emailing secure@microsoft.com or via the portal at https://msrc.microsoft.com.
+      You should receive a response within 24 hours. If for some reason you do not, please follow up via email to ensure we received your original message.
+      Further information, including the MSRC PGP key, can be found in the MSRC Report an Issue FAQ."
 - type: textarea
   attributes:
-    label: ‎‎‎‎‎‎‎ㅤ
+    label: ⚠️ Please do not open issues for anything you think might have a security implication.
     placeholder: Close this window and instead email secure@microsoft.com or disclose the issue via the portal at https://msrc.microsoft.com.
     render: cs
   validations:
