Fix missing title -- we want users to add the title themselves

--- a/.github/ISSUE_TEMPLATE/feature-request--vs-code-runtime-extension.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request--vs-code-runtime-extension.yml
@@ -1,6 +1,5 @@
-name: "Feature Request"
-description: 'Request a new feature for this project'
-title: ''
+name: Feature Request
+description: Request a new feature for this project
 labels: ["feature-request"]
 body:
 - type: textarea
