--- a/.github/ISSUE_TEMPLATE/bug-report--vs-code-runtime-extension.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report--vs-code-runtime-extension.yml
@@ -1,17 +1,17 @@
 name: 🐞 Bug Report
 description: Create a report a potential bug
-title: Describe the issue you're facing
 labels: ["untriaged"]
 body:
 - type: markdown
   attributes:
     value: |
         Thanks for taking the time to fill out this bug report!
+
         📖 Have you checked existing issues to see whether someone else has already reported your issue?
-        ❗ Privacy Alert! The contents in our log files may contain personal data. Prior to posting to GitHub, please remove any personal data which should not be publicly viewable. https://privacy.microsoft.com/en-US/privacystatement"
+        ❗ Privacy Alert! The contents in our log files may contain personal data. Prior to posting to GitHub, please remove any personal data which should not be publicly viewable. https://privacy.microsoft.com/en-US/privacystatement
 - type: textarea
   attributes:
-    label: Describe the bug. *Please attach log file(s) here if you have any.*
+    label: Describe the bug.
     description: |
       Please share some details about the issue you are facing with the .NET Install Tool.
       Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
