Clean up text for issue templates

--- a/.github/ISSUE_TEMPLATE/feature-request--vs-code-runtime-extension.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request--vs-code-runtime-extension.yml
@@ -1,4 +1,4 @@
-name: Feature Request
+name: ✨ Feature Request
 description: Request a new feature for this project
 labels: ["feature-request"]
 body:
