--- a/.github/ISSUE_TEMPLATE/bug-report--vs-code-runtime-extension.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report--vs-code-runtime-extension.yml
@@ -30,7 +30,7 @@ body:
         From there, go to window1 -> exthost -> ms-dotnettools.vscode-dotnet-runtime. The log file should be located in this folder.
 
         Note: The window folder may change depending on how many VS Code windows you have open; if our extension is running in the 2nd window, it'd be in a folder called window2.
-    placeholder: The log file location should be copied to your clipboard if you came from VS Code.
+    value: The log file location should be copied to your clipboard if you came from VS Code.
   validations:
     required: true
 - type: textarea
@@ -52,7 +52,7 @@ body:
 - type: input
   attributes:
     label: .NET Install Tool Version
-    placeholder: e.g. v2.0.0. You can find this by hovering over the extension in VS Code, the version number is to the right of the extension name.
+    description: e.g. v2.0.0. You can find this by hovering over the extension in VS Code, the version number is to the right of the extension name.
   validations:
     required: true
 - type: dropdown
@@ -71,6 +71,6 @@ body:
 - type: input
   attributes:
     label: VS Code Version
-    placeholder: e.g. 1.84.2. You can find this in VS Code by going to Help -> About -> and finding the Version.
+    description: e.g. 1.84.2. You can find this in VS Code by going to Help -> About -> and finding the Version.
   validations:
     required: false
