begin to add code to spawn a remaining sudo process

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "HKCU",
         "HKEY",
         "norestart",
+        "proccom",
         "programfiles",
         "REGHEXVALUE",
         "REGTYPE"
