Fix the extension command category

--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -56,7 +56,7 @@
 			{
 				"command": "dotnet.acquireGlobalSDKPublic",
 				"title": "Install the .NET SDK System-Wide.",
-				"category": "Sample"
+				"category": ".NET Install Tool"
 			}
 		],
 		"configuration": {
