consider update a terminal failure
if we fail to update we are probably still fine
but update is sometimes the first command to be executed
if it is the first and fails, then we will continue with the master process being dead
while thinking it is alive

--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -57,7 +57,7 @@
 				"command": "dotnet.acquireGlobalSDKPublic",
 				"title": "Install the .NET SDK System-Wide.",
 				"category": ".NET Install Tool",
-				"enablement": "config.dotnetAcquisitionExtension.enablePreviewFeatures && dotnetAcquisitionExtension.isGlobalSDKSupported !== false"
+				"enablement": "config.dotnetAcquisitionExtension.enablePreviewFeatures && dotnetAcquisitionExtension.isGlobalSDKSupported"
 			}
 		],
 		"configuration": {
