Move from * to startup finished to prevent lagging VS Code when it starts up

--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -43,7 +43,7 @@
 		"onCommand:dotnet.uninstallAll",
 		"onCommand:dotnet.showAcquisitionLog",
 		"onCommand:dotnet.ensureDotnetDependencies",
-		"*"
+		"onStartupFinished"
 	],
 	"main": "./dist/extension.js",
 	"types": "./dist/extension.d.ts",
